@@ -38,7 +38,8 @@ void construct_std_options()
   arg_parser.add_flag(
     LBANN_OPTION_DISABLE_BACKGROUND_IO_ACTIVITY,
     {"--disable_background_io_activity"},
-    "[STD] prevent the input layers from fetching data in the background");
+    utils::ENV("LBANN_DISABLE_BACKGROUND_IO_ACTIVITY"),
+    "[STD] prevent the data coordinator from fetching data in the background");
   arg_parser.add_flag(
     LBANN_OPTION_DISABLE_CUDA,
     {"--disable_cuda"},
@@ -183,12 +184,13 @@ void construct_std_options()
                         {"--num_epochs"},
                         "[STD] Number of epochs to train model",
                         -1);
-  arg_parser.add_option(LBANN_OPTION_NUM_IO_THREADS,
-                        {"--num_io_threads"},
-                        utils::ENV("LBANN_NUM_IO_THREADS"),
-                        "[STD] Number of threads available to both I/O and "
-                        "initial data transformations for each rank.",
-                        64);
+  arg_parser.add_option(
+    LBANN_OPTION_NUM_IO_THREADS,
+    {"--num_io_threads"},
+    utils::ENV("LBANN_NUM_IO_THREADS"),
+    "[STD] Number of threads available to both I/O and "
+    "initial data transformations for each rank. (Default: 4)",
+    4);
   arg_parser.add_option(LBANN_OPTION_OPTIMIZER,
                         {"--optimizer"},
                         "[STD] Optimizer input file",
